--- a/hotels.html
+++ b/hotels.html
@@ -24,9 +24,6 @@
     <main class="container-hotels">
     <!--НЕ МОГУ ВСТАВИТЬ БЭКГРАУНД В ФОРМУ!!!-->
       <div class="background-filter">
-        <figure>
-          <img src="img/background-2-small.jpg" alt="Filter">
-        </figure>
         <section class="filter clearfix">
           <form method="post" action="/">
           <div class="filter-infrastructure">
@@ -79,36 +76,44 @@
 
 
 <!--ПРОБНЫЙ БЛОК С ОТЕЛЯМИ-->
-  <div class="found clearfix">
-    <div class="found-houses clearfix">
-      <div class="found-houses-img">
-        <figure> <!--(картинка с отелем)-->
-          <img src="img/amara-resort.jpg" alt="Amara resort & spa">
-        </figure>
-      </div>
-      <div class="found-houses-all clearfix">
-      <div class="found-houses-info"><!--(блок с названием отеля)-->
-        <a class="found-info-title properties-black-h3" href="#">Amara resort & spa</a>
-      </div>
-      <div class="found-about clearfix"><!--(блок с гостиницей и 4000р)-->
-        <div class="found-houses-type">
-          <p class="found-houses-type properties-black-h4">Гостиница</p>
-        </div>
-        <div class="found-houses-price">
-          <p class="found-about-price properties-black-h4">от 4000 р.</p>
-        </div>
-      </div>
-    </div>
-    <div class="found-button clearfix"><!--(блок с кнопками подробнее и забронировать)-->
-      <div class="found-button-type">
-        <a class="found-button-more" href="#">Подробнее</a>
-      </div>
-      <div class=" found-button-type">
-        <a class="found-button-book" href="#">Забронировать</a>
-      </div>
-    </div>
-  </div>
-</div>
+  <div class="found clearfix"> <!--общий для всех блоков-->
+    <div class="found-houses clearfix"><!--общий для блока с рисунком и отелем-->
+      <div class="found-houses-img"><!--блок с рисунком-->
+        <img src="img/amara-resort.jpg" alt="Amara resort & spa">
+      </div><!--блок с рисунком-->
+      <div class="found-houses-all clearfix"><!--общий для отеля, гостиницей. ценой-->
+        <div class="found-houses-info"><!--(блок с названием отеля)-->
+          <a class="found-info-title properties-black-h3" href="#">Amara resort & spa</a>
+        </div><!--(блок с названием отеля)-->
+        <div class="found-about clearfix"><!--(блок с гостиницей и 4000р)-->
+          <div class="found-houses-type"><!--(блок с гостиницей)-->
+            <p class="found-houses-type properties-black-h4">Гостиница</p>
+          </div><!--(блок с гостиницей)-->
+          <div class="found-houses-price"><!--(блок с 4000р)-->
+            <p class="found-about-price properties-black-h4">от 4000 р.</p>
+          </div><!--(блок с 4000р)-->
+          </div><!--(блок с гостиницей и 4000р)-->
+          <div class="found-button clearfix"><!--(блок с кнопками подробнее и забронировать)-->
+            <div class="found-button-type"><!--(блок с кнопками подробнее)-->
+              <a class="found-button-more" href="#">Подробнее</a>
+            </div><!--(блок с кнопками подробнее)-->
+            <div class=" found-button-type"><!--(блок с кнопками забронировать)-->
+              <a class="found-button-book" href="#">Забронировать</a>
+            </div><!--(блок с кнопками забронировать)-->
+          </div><!--(блок с кнопками подробнее и забронировать)-->
+        </div><!--общий для отеля, гостиницей. ценой-->
+      </div><!--общий для блока с рисунком и отелем-->
+      <div><!--общий для блока со звездами и рейтингом-->
+        <div><!--блок со звездами-->
+          <img src="">
+        </div><!--блок со звездами-->
+        <div><!--блок с рейтингом-->
+          <p>Рейтинг</p>
+        </div><!--блок с рейтингом-->
+      </div><!--общий для блока со звездами и рейтингом-->
+    </div><!--общий для всех блоков-->
+
+<!-- </div> -->
 
 <!--ПРОБНЫЙ БЛОК С ОТЕЛЯМИ-->
 
